testsuite/tests/dependent/should_fail/T16326_Fail6.stderr
T16326_Fail6.hs:9:3: error: [GHC-51580]
    • Illegal visible, dependent quantification in the type of a term
    • In the definition of data constructor ‘MkFoo’
      In the data type declaration for ‘Foo’

